# qt3d-simple

./: CMakeLists.txt  Main.qml  Scene.qml  SimpleForwardRenderer.qml  main.cpp
